@@ -1,3 +1,11 @@
+2025-02-14 Gabriele Gorla <gorlik@yahoo.com>
+
+	* device/lib/mos6502/div.s,
+	  device/lib/mos6502/ldiv.s,
+	  device/lib/mos6502/_divuint.s,
+	  device/lib/mos6502/_divuling.s:
+	  Implement div and ldiv in assembly.
+
 2025-02-13 Gabriele Gorla <gorlik@yahoo.com>
 
 	* src/mos6502/gen.c:
